[package]
name = "exper-refcell"
authors = [ "Wink Saville <wink@saville.com>" ]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Default dev profile from:
#   https://doc.rust-lang.org/cargo/reference/profiles.html#dev
[profile.dev]
opt-level = 0
debug = true
#split-debuginfo = '...'  # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

# Default dev profile from:
#   https://doc.rust-lang.org/cargo/reference/profiles.html#release
[profile.release]
opt-level = 3
debug = false
#split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.my-dev]
inherits = "dev"

[profile.my-rel]
inherits = "release"
